--- a/public_html/page_elements/css/portfolio-selector.css
+++ b/public_html/page_elements/css/portfolio-selector.css
@@ -1,5 +1,16 @@
 /* Default custom select styles */
 
+@font-face {
+    font-family: 'icomoon';
+    src: url('../../assets/fonts/icomoon/icomoon.eot?-rdnm34');
+    src: url('../../assets/fonts/icomoon/icomoon.eot?#iefix-rdnm34') format('embedded-opentype'),
+    url('../../assets/fonts/icomoon/icomoon.woff?-rdnm34') format('woff'),
+    url('../../assets/fonts/icomoon/icomoon.ttf?-rdnm34') format('truetype'),
+    url('../../assets/fonts/icomoon/icomoon.svg?-rdnm34#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 .cs-select {
     font-weight: 100;
 }
@@ -56,10 +67,10 @@ div.cs-select:focus {
     -moz-osx-font-smoothing: grayscale;
 }
 
-/*.cs-select > span::after {*/
-    /*content: '\25BE';*/
-    /*right: 1em;*/
-/*}*/
+.cs-select > span::after {
+    content: '\25BE';
+    right: 1em;
+}
 
 .cs-select .cs-selected span::after {
     content: '\2713';
@@ -112,17 +123,6 @@ div.cs-active {
 
 .cs-select li.cs-optgroup > span {
     cursor: default;
-}
-
-@font-face {
-    font-family: 'icomoon';
-    src: url('../../assets/fonts/icomoon/icomoon.eot?-rdnm34');
-    src: url('../../assets/fonts/icomoon/icomoon.eot?#iefix-rdnm34') format('embedded-opentype'),
-    url('../../assets/fonts/icomoon/icomoon.woff?-rdnm34') format('woff'),
-    url('../../assets/fonts/icomoon/icomoon.ttf?-rdnm34') format('truetype'),
-    url('../../assets/fonts/icomoon/icomoon.svg?-rdnm34#icomoon') format('svg');
-    font-weight: normal;
-    font-style: normal;
 }
 
 div.cs-skin-slide {
